# MidnightMath

./: CMakeLists.txt  LICENSE.md
clock/: lc.txt
include/: constants.hpp  information.hpp  matrix.hpp  matrix_library.hpp  md_math.hpp  support_functions.hpp  units.hpp  vector.hpp
src/: information.cpp  vector.cpp
tests/: matrix_tests.cpp  sanity_test.cpp  simd_vector_tests.cpp  vector_tests.cpp
